--- a/novaspay-frontend/src/locales/zh/translations.json
+++ b/novaspay-frontend/src/locales/zh/translations.json
@@ -1,83 +1,116 @@
 {
-  "Default": "默认",
-  "Large": "大",
-  "Small": "小",
-  "User Settings": "用户设置",
-  "Logout": "退出登录",
-  "Update Account": "更新账户",
-  "USD Account": "美元账户",
-  "Views": "查看",
+  "Home": "首页",
+  "Virtual Bank": "虚拟银行",
+  "Receive": "收款",
+  "Accounts": "账户",
+  "History": "历史记录",
+  "History List": "历史列表",
+  "VA Applications": "虚拟账户申请",
+  "Apply Kyc Records": "KYC申请记录",
+  "Onboarding List": "入驻列表",
+  "VA Apply History": "虚拟账户申请历史",
+  "Counterparty": "交易对手",
+  "Client": "客户",
+  "Client List": "客户列表",
+  "Users": "用户",
+  "Admin User": "管理员用户",
+  "Invite to Register": "邀请注册",
+  "Switch wallet user function": "切换钱包用户功能",
+  "To switch wallet accounts, please click the button!": "要切换钱包账户，请点击按钮！",
   "Recent Transactions": "最近交易",
   "Description": "描述",
   "Date": "日期",
   "Amount": "金额",
   "Fee": "手续费",
-  "Balance": "余额",
   "Status": "状态",
-
-  "Home": "首页",
-  "Virtual Accounts": "虚拟账户",
-  "Receive": "收款",
-  "Crypto Assets": "加密资产",
-  "History": "历史记录",
-  "Accounts": "账户",
-  "Buy/Sell": "买入/卖出",
-  "Application List": "申请列表",
-  "History List": "历史列表",
-  "Banking Name": "银行名称",
-  "Currency": "货币",
-  "Client Name": "客户名称",
-  "IBAN Number": "IBAN 号码",
+  "TRANSFER": "转账",
+  "PAYMENT": "支付",
+  "WITHDRAWAL": "提款",
+  "NONE": "无",
+  "PENDING": "待处理",
+  "IN_REVIEW": "审核中",
+  "FAILED": "失败",
+  "SUCCESS": "成功",
+  "CANCELED": "已取消",
+  "Copyright © 2025": "版权所有 © 2025",
   "Account Number": "账户号码",
+  "Banking Name": "银行名称",
+  "IBAN Number": "IBAN号码",
   "Account Name": "账户名称",
+  "Currency": "货币",
+  "Select an option": "选择一个选项",
+  "Search": "搜索",
+  "Reset": "重置",
+  "Client Name": "客户名称",
+  "Balance": "余额",
   "Banking Address": "银行地址",
   "Creation Date": "创建日期",
   "Latest Update": "最新更新",
   "Details": "详情",
-  "Search": "搜索",
-  "Reset": "重置",
-  "No Data": "无数据",
-  "Available balance": "可用余额",
-  "Transaction Information": "交易信息",
-  "Transaction ID": "交易编号",
+  "Total": "总计",
+  "Go to": "跳转至",
+  "Order Id": "订单编号",
   "Area": "地区",
-  "Buy/Sell Note": "备注：报价仅供参考，最终价格以我方平台账户经理确认为准。最终报价准备好后，我们将通过电子邮件与您联系。",
-
-  "Get the Latest rates": "获取最新汇率",
-  "Application No": "申请编号",
-  "From Currency": "源货币",
-  "Transaction Type": "交易类型",
-  "To Currency": "目标货币",
-  "Reference Rate": "参考汇率",
-  "Total Amount": "总金额",
-  "Fee Amount": "手续费金额",
-  "Estimated Amount": "预估金额",
-  "Approver": "审批人",
-  "Approver Comment": "审批人备注",
-  "Remark": "备注",
+  "Receiving Name": "收款人名称",
+  "Receiving Number": "收款人号码",
+  "Order Type": "订单类型",
+  "Payment Account": "付款账户",
+  "Receiver Name": "收款人姓名",
+  "Receiver Number": "收款人号码",
+  "Reason": "原因",
   "Created At": "创建时间",
-  "Actions": "操作",
-  "View": "查看",
-  "Approve": "批准",
-  "Reject": "拒绝",
-  "Pending": "待处理",
-  "Approved": "已批准",
-  "Rejected": "已拒绝",
-  "Cancelled": "已取消",
-  "Create Application": "创建申请",
-  "Submit": "提交",
-  "Cancel": "取消",
-  "Are you sure to approve this application?": "您确定要批准此申请吗？",
-  "Are you sure to reject this application?": "您确定要拒绝此申请吗？",
-  "Please enter the approver comment": "请输入审批人备注",
-  "Application Details": "申请详情",
-  "Transaction Details": "交易详情",
-  "No transaction details available.": "暂无交易详情。",
-  "Loading...": "加载中...",
-  "Error fetching data. Please try again.": "获取数据出错，请重试。",
+  "Updated At": "更新时间",
+  "Credential": "凭证",
+  "Email": "邮箱",
+  "Name": "名称",
+  "Type": "类型",
+  "Phone": "电话",
+  "Agent ID": "代理编号",
+  "Update": "更新",
+  "business": "企业",
+  "individual": "个人",
+  "corporate": "公司",
+  "Account Error Msg": "账户错误信息",
+  "Bank Account Status Msg": "银行账户状态信息",
+  "Account verified successfully": "账户验证成功",
+  "Pending verification": "待验证",
+  "Country": "国家",
+  "Agent Name": "代理人姓名",
+  "Bank Account Number": "银行账户号码",
+  "Invitation Code": "邀请码",
+  "Account Info": "账户信息",
+  "Operate": "操作",
+  "KYB Record": "企业认证记录",
+  "See account": "查看账户",
+  "USA": "美国",
+  "France": "法国",
+  "Australia": "澳大利亚",
+  "UK": "英国",
+  "Germany": "德国",
+  "Canada": "加拿大",
+  "Agent Login System": "代理登录系统",
+  "Novaspay is a technology service provider specializing in payment and account integration solutions. We offer technical API connectivity and infrastructure support to financial institutions and platform partners. NovaSpay does not directly engage in fund custody or settlement activities; all regulated financial services are provided by our licensed financial partners.": "Novaspay是一家专注于支付和账户集成解决方案的技术服务提供商。我们为金融机构和平台合作伙伴提供技术API连接和基础设施支持。NovaSpay不直接从事资金托管或结算活动；所有受监管的金融服务均由我们持牌的金融合作伙伴提供。",
+  "Email sign in": "邮箱登录",
+  "Forgot Password": "忘记密码",
+  "Sign in": "登录",
+  "Personal Information": "个人信息",
+  "User Mail": "用户邮箱",
   "Basic Information": "基本信息",
   "Reset Password": "重置密码",
-  "Set funds password": "设置资金密码",
-  "Update funds password": "更新资金密码",
-  "Personal Information": "个人信息"
+  "Old Password": "旧密码",
+  "New Password": "新密码",
+  "Confirm Password": "确认密码",
+  "Save": "保存",
+  "Cancel": "取消",
+  "Purpose": "目的",
+  "Payment Method": "付款方式",
+  "Headquarters": "总部",
+  "State/Province": "州/省",
+  "City": "城市",
+  "Postal Code": "邮政编码",
+  "Business Category": "业务类别",
+  "Operating Country or Region": "运营国家或地区",
+  "Expected Funding Source": "预期资金来源",
+  "Store Photos": "店铺照片",
+  "Decline Reason": "拒绝原因"
 }
